--- a/style.css
+++ b/style.css
@@ -121,12 +121,12 @@ li > label {
 li >    input[type="text"] {
     width: 226px;
 }
-button.delete img {
+.remove {
     height: 2em;
     transform: rotateZ(45deg);
     transition: transform 200ms ease-in;
 }
-button.delete img:hover {
+.remove:hover {
     transform: rotateZ(0);
 }
 
