--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ button:hover {
 }
 /* Heading */
 h3,
-label[for="new-task"] {
+.add-item-label {
     color: #333;
     font-weight: 700;
     font-size: 15px;
