--- a/style.css
+++ b/style.css
@@ -47,7 +47,9 @@ input,
 button{
     outline: none;
 }
-button {
+.add,
+.delete,
+edit{
     background: none;
     border: 0px;
     color: #888;
@@ -56,7 +58,9 @@ button {
     font-family: Lato, sans-serif;
     cursor: pointer;
 }
-button:hover {
+.add,
+.delete,
+edit:hover {
     color: #3a3a3a;
 }
 /* Heading */
